# pixxiden

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AI_CONTEXT_PROMPT.md  ARCHIVE_README.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_AUTH.md  LICENSE  MIGRATE.md  PROJECT_SUMMARY.md  Proton-GE Auto-Installation.md  QUICKSTART.md  README.md  STORE_AUTH.md  STORE_AUTH_CHECKLIST.md  STORE_AUTH_SUMMARY.md  deploy.sh  design-system.pen  index.html  oxlintrc.json  package-lock.json  package.json  pixiden-session.desktop  pixiden-session.sh  pixxiden-session.desktop  pixxiden-session.sh  prompt.md  ref.html  tailwind.config.js  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/: copilot-instructions.md
.github/agents/: coder.md  designer.md  orchestrator.agent.md  planner.agent.md  reviewer.agent.md  tester.md
.github/workflows/: build.yml
backend/: go.mod  go.sum
docs/: DESIGN_SYSTEM.md  PREREQUISITES.md  README.md  TESTING_BEST_PRACTICES.md
e2e/: MOCKS.md  MOCK_MODE.md  README.md
e2e/fixtures/: mockGames.ts
e2e/helpers/: enableMockMode.ts  gamepad.ts  index.ts  mockHelpers.ts  selectors.ts  utils.ts
e2e/page-objects/: APIKeysModal.ts  DownloadsPage.ts  GameDetailPage.ts  LibraryPage.ts  NavigationHelper.ts  SettingsPage.ts  StoreSettingsPage.ts  index.ts
e2e/scenarios/: 01-api-keys-setup.spec.ts  01-library-browsing.spec.ts  02-game-detail.spec.ts  02-store-configuration.spec.ts  03-epic-authentication.spec.ts  03-epic-manual-auth.spec.ts  03-navigation.spec.ts  04-game-launch.spec.ts  04-library-games.spec.ts  05-game-installation.spec.ts  05-sidecar-real-test.spec.ts  README.md
e2e/screenshots/: .gitkeep
e2e/tests/: 00-initial-setup.spec.ts  00-splash-screen.spec.ts  01-app-launch.spec.ts  02-store-loading.spec.ts  03-library-ui.spec.ts  04-navigation.spec.ts  05-game-management.spec.ts  06-store-authentication.spec.ts  07-library-filters.spec.ts  07-new-features.spec.ts  08-store-authentication.spec.ts  real-journey.spec.ts  user-journey.spec.ts
e2e/types/: wdio.d.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: database.rs  main.rs
frontend/src-tauri/src/store/: mod.rs
game-launcher.archive/: .gitignore  README.md  dev.sh  diag.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
game-launcher.archive/src/: App.vue  style.css  types.ts
game-launcher.archive/src-go/: gamepad.go  go.mod  main.go  process.go  sources.go
game-launcher.archive/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: check-clis.sh  dependencies.yaml  download-sidecars.sh  pixiden-session  pixiden-session.sh  postinstall.js  reset-enrichment.sh  run-e2e-app.sh  setup-sidecars.sh  test-output.json  test-output.txt  umu-run-wrapper.sh  validate-db.sh
src/: App.vue  main.ts  main.ts.bak  style.css  vue-shims.d.ts
src-tauri/: .env.example  .rustfmt.toml  Cargo.toml  build.rs  pixxiden.desktop  tauri.conf.dev.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/binaries/: README.md  nile-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  gamepad.rs  lib.rs  main.rs  runners.rs  sudoers.rs  system.rs  system_updates.rs  tests.rs
src-tauri/src/commands/: api_keys.rs  auth.rs  cache.rs  game.rs  installation.rs  launch.rs  mod.rs  runners.rs  store.rs  system.rs  updates.rs  window.rs
src-tauri/src/models/: game.rs
src-tauri/src/services/: achievements.rs  api_keys.rs  cache_manager.rs  game_enricher.rs  howlongtobeat.rs  igdb.rs  mod.rs  protondb.rs  steamgriddb.rs
src-tauri/src/services/auth/: amazon.rs  epic.rs  gog.rs  mod.rs  store_manager.rs
src-tauri/src/store/: gogdl.rs  legendary.rs  mod.rs  nile.rs  steam.rs
src/components/: GameCard.vue
src/composables/: useCurrentGame.ts  useDemoGames.ts  useFocusNavigation.ts  useFooterControls.ts  useGamepad.ts  useGamepadScroll.ts
src/constants/: shortcuts.ts
src/router/: index.ts
src/services/: GameLibraryOrchestrator.ts  api.ts  index.ts
src/stores/: auth.ts  downloads.ts  library.ts  sideNav.ts
src/types/: index.ts
src/ui/: Select.vue
src/views/: AccountsView.vue  DownloadsView.vue  GameCustomize.vue  GameDetailContent.vue  GameDetailView.vue  GameDetails.vue  (+11 more)
tests/: e2e-mocks-validation.spec.ts
(+261 files in other folders)
