[package]
name = "pixiden"
version = "0.1.0"
description = "PixiDen - Unified Game Launcher"
authors = ["PixiDen Team"]
license = "MIT"
repository = "https://github.com/pixiden/pixiden"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pixiden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
shellexpand = "3.1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
which = "7.0"
sysinfo = "0.32"

# Gamepad support
gilrs = "0.11"
