[package]
name = "Pixxiden"
version = "0.1.0"
description = "Pixxiden - Unified Game Launcher"
authors = ["Pixxiden Team"]
license = "MIT"
repository = "https://github.com/Pixxiden/Pixxiden"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pixxiden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
shellexpand = "3.1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
which = "7.0"
sysinfo = "0.32"

# Gamepad support
gilrs = "0.11"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# Environment variables
dotenvy = "0.15"

# SHA256 for cache validation
sha2 = "0.10"

# Base64 encoding (for IGDB)
base64 = "0.22"

# Async file operations
tokio-util = { version = "0.7", features = ["io"] }

# Rate limiting
governor = "0.8"

# For HowLongToBeat scraping
scraper = "0.22"
# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.24.0"
